@@ -1,0 +1,287 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u5927\u7206\u767c\uff01Stray Kids\u65e5\u672c\u767c\u884c\u7b2c\u4e8c\u5f35\u5c08\u8f2f\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u544a\u793a\u724c\u767e\u5927\u71b1\u9580\u699c\u505c\u7559\u5341\u9031\u3001\u739f\u661f\u5317\u7f8e\u5de1\u8ff4\u6f14\u51fa", "description": "K-pop\u5927\u7206\u767c\uff01Stray Kids\u65e5\u672c\u767c\u884c\u7b2c\u4e8c\u5f35\u5c08\u8f2f\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u544a\u793a\u724c\u767e\u5927\u71b1\u9580\u699c\u505c\u7559\u5341\u9031\u3001\u739f\u661f\u5317\u7f8e\u5de1\u8ff4\u6f14\u51fa", "url": "https://www.famechos.me/news/K-pop\u5927\u7206\u767c\uff01Stray Kids\u65e5\u672c\u767c\u884c\u7b2c\u4e8c\u5f35\u5c08\u8f2f\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u544a\u793a\u724c\u767e\u5927\u71b1\u9580\u699c\u505c\u7559\u5341\u9031\u3001\u739f\u661f\u5317\u7f8e\u5de1\u8ff4\u6f14\u51fa.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T00:23:32.573353+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出.html"/>
+<meta name="description" content="K-pop席捲全球！Stray Kids、防彈少年團、玟星等人氣團體接連傳出好消息，帶動K-pop在國際上的熱潮。">
+
+<meta name="keywords" content="K-pop, Stray Kids, 防彈少年團, 朴智旻, 玟星, 日本專輯, 告示牌百大熱門榜, 北美巡迴演出">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出.html" />
+        <meta property="og:title" content="K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出" />
+        <meta property="og:description" content="K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出" />
+        <meta property="twitter:description" content="K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop大爆發！Stray Kids日本發行第二張專輯、防彈少年團朴智旻告示牌百大熱門榜停留十週、玟星北美巡迴演出</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這八人組合於2020年3月在日本出道，發行精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。</p>
+<p>以下是Stray Kids在日本的音樂作品：</p>
+<ul>
+<li>精選輯：《SKZ2020》</li>
+<li>迷你專輯：3張</li>
+<li>實體單曲：2張</li>
+<li>完整專輯：1張</li>
+</ul>
+<p>Stray Kids去年9月發行的最新迷你專輯《Social Path (feat. リサ)/ Super Bowl - Japanese ver.》橫掃日本公信榜所有榜單，包括每日、每週、每週綜合和每月專輯排名，並成為該組合在日本首張銷量超過一百萬張的專輯。</p>
+<h2>告示牌百大熱門榜上，防彈少年團成員朴智旻的歌曲停留時間突破十週</h2>
+<p>防彈少年團成員朴智旻的個人單曲《Who》在告示牌百大熱門榜上連續十週排名第30位。《Who》是朴智旻第二張個人迷你專輯《MUSE》的主打單曲，該專輯在告示牌200榜上排名第91位，比上週上升四位。</p>
+<p>以下是朴智旻在告示牌榜上的成績：</p>
+<ul>
+<li>告示牌百大熱門榜：連續十週排名第30位</li>
+<li>告示牌200榜：排名第91位</li>
+</ul><h2>新褲子在Spotify上突破3億次播放</h2>
+<p>新褲子的同名單曲在Spotify上突破3億次播放。這首歌曲是新褲子的第二張迷你專輯《Get Up》的序幕曲，於去年7月與另外兩首單曲一起發行。</p>
+<p>新褲子在Spotify上已累積超過52億次播放。該組合第六首達到這一里程碑的歌曲，之前的五首歌曲分別是《OMG》、《Ditto》、《Hype Boy》、《Attention》和《Super Shy》。</p>
+<h2>玟星北美巡迴演出即將登場</h2>
+<p>玟星將在北美巡迴演出。</p>
+<h2>Spotify上的《Who》已突破6億次播放</h2>
+<p>《Who》在Spotify上已獲得6億次播放，於9月份達到這一里程碑，用時66天，是今年的紀錄。這首歌曲在Spotify的每週全球熱門歌曲榜上排名第三，而迷你專輯排名第八。</p>
+<h2>《Super Shy》榮登“2020年代至今100首最佳歌曲”榜單</h2>
+<p>與此同時，《Super Shy》被美國音樂出版物Pitchfork評為“2020年代迄今為止的100首最佳歌曲”之一。這首單曲在週日發布的榜單上排名第13位，是唯一入選的K-pop歌曲。</p>
+<h2>玟星個人巡迴演唱會首次登陸北美</h2>
+<p>玟星（Moonbyul）宣佈將把首次個人巡迴演唱會延伸至北美。這次巡迴演唱會將於11月12日起訪問美國和加拿大12個城市，並將在洛杉磯展開北美巡迴演唱會。</p>
+<p>玟星早前在亞洲舉行了首次個人巡迴演唱會「玟星首次世界巡迴演唱會：星光下的博物館」（Museum: An Epic of Starlit），並在8月初於澳門結束。這次巡迴演唱會的名稱源自玟星的首張個人專輯「MUSE」（Starlit of Muse），該專輯於2月發行，並在十個地區的iTunes熱門專輯榜登上榜首。</p>
+<p>以下是玟星的巡迴演唱會日期和地點：</p>
+<ul>
+<li>11月12日：洛杉磯</li>
+<li>11月14日：舊金山</li>
+<li>11月16日：西雅圖</li>
+<li>11月18日：溫哥華</li>
+<li>11月20日：多倫多</li>
+<li>11月22日：紐約</li>
+<li>11月24日：波士頓</li>
+<li>11月26日：芝加哥</li>
+<li>11月28日：達拉斯</li>
+<li>11月30日：休士頓</li>
+<li>12月2日：邁阿密</li>
+<li>12月4日：亞特蘭大</li>
+</ul>
+<p>玟星的首張個人專輯「MUSE」（Starlit of Muse）於2月發行，並在十個地區的iTunes熱門專輯榜登上榜首。主打歌曲「Touchin & Movin」也在熱門歌曲榜上取得同樣成績。8月，玟星重新發行了該專輯的20首曲目黑膠版本，名為「Starlit of Twinkle」。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gdZLi9oWNZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
