@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 00:20:58 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 00:23:44 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
@@ -25,5 +25,11 @@
   <description>樂隊熱潮席捲韓國音樂界韓國樂隊正在席捲當地音樂榜單尤其是JYP娛樂旗下的流行搖滾樂隊DAY6韓語데이식스DeiSigseu截至上週五DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名其中Happy和WelcometotheShow分別佔據榜單第一和第三名而MeltDown和TimeofOurLife則穩居第四和第六名DAY6並非新晉樂隊但自...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 00:20:58 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html</link>
+  <description>今日K-pop：Stray Kids將在日本發行第二張專輯 。Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這八人組合於2020年3月在日本出道，發行精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。。。以下是Stray Kids在日本的音樂作品：</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 00:23:44 +0800</pubDate>
 </item></channel>
 </rss>
