@@ -5,3 +5,4 @@ https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-f
 https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241007050635
 https://www.koreaherald.com/view.php?ud=20241010050640
+https://www.koreaherald.com/view.php?ud=20241003050216
